Fixed some trailing >'s and added amatriciana

--- a/recipes/amatriciana.html
+++ b/recipes/amatriciana.html
@@ -6,6 +6,23 @@
     </head>
     <body>
         <h1>Amatriciana</h1>
+        <img src="amatriciana.jpg" alt="Pasta Amatriciana">
+        <h4>The pasta is good</h4>
+        <p>This is a recipe for the Roman pasta dish Amatriciana. It is one of the four classic Roman pastas along with Gricia, Carbonara, and Cacio e Pepe.</p>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>500g Bucatini Pasta - Ideally bronze cut</li>
+            <li>32oz whole San Marzano tomatoes - canned</li>
+            <li>100g Pecorino Romano - fresh grated</li>
+            <li>100g Guanciale - cut into small dice</li>
+        </ul>
+        <ol>
+            <li>Put a pot of salted water on to boil</li>
+            <li>Slowly sweat down the guanciale</li>
+            <li>Add the tomatoes and cook them together until it cooks down</li>
+            <li>Finish with the cheese</li>
+            <li>Boil the pasta</li>
+        </ol>
     </body>
 </html>
 
