--- a/recipes/blt.html
+++ b/recipes/blt.html
@@ -18,7 +18,7 @@
             <li>2 Smears of Mayo</li>
         </ul>
         <ol>
-            <li>Sear the Bacon</li>>
+            <li>Sear the Bacon</li>
             <li>Compile the sandwich</li>
         </ol>
     </body>
